Some minor changes

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
             align-content: center;
             margin: -1 0 0 0;
             padding: 0;
-            width:280px;
+            width:330px;
         }
 
         h2 {
@@ -35,7 +35,6 @@
             border-radius: 0;
             color: rgb(112, 186, 189);
             cursor: pointer;
-            display: flex;
             align-self: center;
             font-size: 1rem;
             font-weight: 400;
@@ -81,6 +80,7 @@
 </head>
 <body>
     <h2>Generate Link Previews for your site</h2>
+    <p>Note: Refresh the page before generating</p>
     <button id="generateButton">Generate Sharing Link</button>
     <div id="linkDisplay">
         <h3 id="title">Title</h3>
